  - [Library] (#2) Only one IP network was added to the config file in dual-stack configurations
  - [Library] (#4) The psk of the main peer in the config files of the non-main-peers was wrong
* Known bugs and limitations:
  - this version only supports the creation of a roadwarrior-configuration
  - interface is not stable and can change drastically in future versions

Release 0.1.0a3
* Added:
  - [Library] [UI] (#5) Allow any peer to connect to multiple endpoints
  - [Library] [UI] (#6) Add custom "AllowedIPs" to a peer
  - [Library] [UI] (#7) Add option to set PersistentKeepAlive per peer
  - [Library] (#12) Add data integrity check of json files at startup
  - [UI] (#8) Add connection matrix
* Fixed:
  - [UI] Setting "verbosity" was not used
* Changed:
  - [UI] Existing site and peer names are shown more frequently (where it makes sense)
  - [Library] [UI] Clarification of some variable names and descriptions
* Known bugs and limitations:
  - interface is not stable and can change drastically in future releases

Release 0.1.0a4
* Fixed:
  - [Library] Creation of a new site was impossible
  - [Library] Integrity check of sites failed (integrity check looked for key "version" instead of "config_version")
  - [Library] Integrity check was unaware of values with multiple allowed datatypes (e.g. "NoneType" and "bool")
  - [Library] Recreation of the keys for a peer removed all other attributes from this peer
* Known bugs and limitations:
  - interface is not stable and can change drastically in future releases

Release 0.1.0a5
* Added:
  - [Library] [UI] (#13) Add PostUp and PostDown for peers
  - [Library] [UI] (#14) Add individual redirection of traffic for IPv4 or IPv6
  - [Library] Automatic update of old sites.json and settings.json config files
* Fixed:
  - [Library] Additional AllowedIPs appeared multiple times in wireguard config files
* Changed:
  -
* Known bugs and limitations:
  - interface is not stable and can change drastically in future releases