@@ -44,6 +44,7 @@ Release 0.1.0a5
   - [Library] [UI] (#13) Add PostUp and PostDown for peers
   - [Library] [UI] (#14) Add individual redirection of traffic for IPv4 or IPv6
   - [Library] Automatic update of old sites.json and settings.json config files
+  - [Library] Add routing fix for globally routed IPv6 networks
 * Fixed:
   - [Library] Additional AllowedIPs appeared multiple times in wireguard config files
 * Changed:
